Fixing issue with footer on safari

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -5,6 +5,7 @@
 // Updates to the layout
 .main_container
   margin-top: 100px
+  min-height: 480px
 
 .container
   margin-left: auto
